# addlink

./: .anjuta_sym_db.db  CMakeLists.txt  README  app.cpp  configure.ac  international.cc  international.cc~  international.h
.anjuta/session/: anjuta.session
src/: Makefile.am
